# fg-sdl2

./: .gitignore  Cargo.toml  package.ps1  package.sh  setup_sdl_windows.sh  update.py
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: controllerdb.txt
assets/animations/: c1_hitstun.anim  c1_idle.anim  c1_punch.anim  c1_walking_v2.anim
macros/: Cargo.toml
macros/src/: lib.rs
src/: app_context.rs  asset_manager.rs  camera.rs  fixed_point.rs  fvec2.rs  game.rs  gui.rs  input.rs  main.rs  state.rs  time.rs  updater.rs
src/game/: animation.rs  camera.rs  character.rs  fixed_point.rs  input.rs  movelist.rs
src/game/character/: guy.rs
src/gui/: label.rs
updater/: Cargo.toml
updater/src/: main.rs
