[package]
name = "fg-sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggrs = "0.9"
sdl2 = { version = "0.35", features = [] }
serde = "1"
serde_json = "1"
base64 = "0.21"
image = "0.24"
bytemuck = "1"
macros = { path = "macros" }
clap = { version = "4", features = ["derive"] }
